# ECSE318

./: .gitignore  HW1.qpf  transcript  unsigned_parallel_multiplier.qws
hw1/: HW1.qpf  SCP.txt  conditional_complement.v  csa_module.v  dff.v  full_adder.v  leospec.his  mux.v  p1.v  p1_tb.v  p2.do  p2.v  p2_old.v  p2_old2.v  p2_tb.v  p2v2.v  p2v3.v  p3.v  p3_tb.v  p4.v  p4_tb.v  p5.do  p5.v  p5_tb.v  prop_adder.v  register.v  sign_extend.v  test_prop.v  transcript  twos_complement.v  unidirectional_shift_reg.v  unsigned_parallel_multiplier.qsf  unsigned_parallel_multiplier.qws  vsim.wlf  wave.do  wlft86Rdj6  wlftc5YPV6  wlftnhavVu
hw2/: hw2.asm.rpt  hw2.done  hw2.fit.rpt  hw2.fit.summary  hw2.flow.rpt  hw2.jdi  hw2.map.rpt  hw2.map.smsg  hw2.map.summary  hw2.pin  hw2.qpf  hw2.qsf  hw2.qws  hw2.sta.rpt  hw2.sta.summary  transcript
hw2/p1/: adder.v  adder_tb.v  alu.v  alu_tb.v  comparator.v  conditional_sum_adder16.v  full_adder.v  logic.v  prop_adder.v  shift.v  test.v  test_tb.v  transcript
hw2/p1/old/: test.v
hw2/p1/syn/: Proc.sdf  Proc.v  SCP.txt  fast_adder_out  leospec.his  slow_adder_out
hw2/p2/: card_stack.v  decoder.v  freecellPlayer.v  freecellPlayer2.v  freecell_logic.v  freecell_notation.v  mux2x1.v  mux8x1.v  order_validator.v  p2.do  stack_tb.v  testFreecell.v  transcript  vsim_stacktrace.vstf
hw3/: transcript
hw3/p1/: csa_module.vhd  multiplier.vhd  prop_adder.vhd  tb.v  transcript
hw3/p2/: full_adder.vhd  register.vhd  serial_adder.vhd  shift_register.vhd  tb.v  tb2.v  tcl_stacktrace.txt  transcript  wave.do  wave2.do
hw3/p3/: both.vhd  dff.vhd  state_machine.vhd  tb.v  transcript
hw3/p4/: alu.v  assembler.py  assembler_v2.py  barrel_shift.v  barrel_shift2.v  barrel_shifter.qsf  barrel_tb.v  cpu.v  mem.v  p4.qpf  p4.txt  p5.txt  p6.txt  rf.v  sign_extend.v  soc.v  tcl_stacktrace.txt  transcript  wave.do
hw3/p4/jank_assembler/: Cargo.toml  p4.asm  p5.asm  p6.asm
hw3/p4/jank_assembler/src/: main.rs
hw4/p1/: both.vhd  dff.vhd  fsm.do  handshake.vhd  tb.v  transcript
hw4/p2/: cache.vhd  cache_conntroller.vhd  modelsim.ini  ram.vhd  tb.v  transcript  tri_state_buffer.vhd
hw4/p3/: SSP.qsf  SSP.qws  SSP.v  fifo.v  p3.qpf  rx.v  rxtx.v  ssp_test.v  sync.v  transcript  tx.do  tx.v  tx_tb.v  wave.do
hw5/: .gitignore  CMakeLists.txt  input2.txt  output.txt  output1-1.txt  output1.txt  output2.txt  simoutput.txt  simoutput1.txt  simoutput2.txt  test.v  test2.v  test_gen.py
hw5/include/: gate.h  lut.h  simulator.h  string_util.h  top.h  types.h  util.h
hw5/src/: gate.cpp  parser.cpp  sim.cpp  simulator.cpp  string_util.cpp  top.cpp
